# piora

./: .gitignore  LICENSE  README.md
benchmark/: CMakeLists.txt  README.md  setup.py
benchmark/pyvectorssd/: README.md  tutorial_db.py
benchmark/src/: python_binding.cpp  vectorssd.cc  vectorssd.h  vectorssd_test.cc
cosmos_hw/: .project
util/: build.tcl
util/cosmos_scripts/: README.md  cosmos_init.tcl
vectorssd/: .project
vectorssd/cosmos_app/: .cproject  .project
vectorssd/cosmos_app/src/: README.md
vectorssd/cosmos_app/src/vector/: README.md  binary_heap.c  binary_heap.h  hnsw.c  hnsw.h  hnsw_config.h  index.c  index.h  ivf.c  ivf.h
vectorssd/cosmos_bsp/: .cproject  .project  system.mss
vectorssd/cosmos_bsp/ps7_cortexa9_0/include/: xparameters.h
vectorssd/cosmos_bsp/ps7_cortexa9_0/libsrc/bram_v4_3/src/: xbram_g.c
vectorssd/cosmos_bsp/ps7_cortexa9_0/libsrc/iicps_v3_9/src/: xiicps_g.c
vectorssd/cosmos_bsp/ps7_cortexa9_0/libsrc/usbps_v2_4/src/: xusbps_g.c
vectorssd/cosmos_hw/: .project
